refactor(contact-requests): apply PR review changes from Ratmir